Proof of concept for module-plugin interaction

--- a/app/modules/mod_mystorage/language/en-GB/en-GB.mod_mystorage.ini
+++ b/app/modules/mod_mystorage/language/en-GB/en-GB.mod_mystorage.ini
@@ -4,7 +4,7 @@
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-MOD_MYSTORAGE="My Resources"
+MOD_MYSTORAGE="My Storage"
 MOD_MYSTORAGE_XML_DESCRIPTION="This module will display a list of publications (resources, wiki pages, etc.)"
 
 MOD_MYSTORAGE_SUBMITTED_BY="Submitted by %s"
