--- a/app/plugins/authentication/shibboleth/language/en-GB/en-GB.plg_authentication_shibboleth.sys.ini
+++ b/app/plugins/authentication/shibboleth/language/en-GB/en-GB.plg_authentication_shibboleth.sys.ini
@@ -11,5 +11,7 @@ PLG_AUTHENTICATION_SHIBBOLETH_PARAM_ADMINLOGIN_LABEL="Admin login"
 PLG_AUTHENTICATION_SHIBBOLETH_PARAM_ADMINLOGIN_DESC="Enable this plugin for backend authentication"
 PLG_AUTHENTICATION_SHIBBOLETH_PARAM_AUTO_APPROVE_LABEL="Auto approve new users"
 PLG_AUTHENTICATION_SHIBBOLETH_PARAM_AUTO_APPROVE_DESC="Automatically approve new users that register through this plugin.  This will override the setting in the users component concerning new user approval status."
+PLG_AUTHENTICATION_SHIBBOLETH_PARAM_ENDPOINT_LABEL="Endpoint"
+PLG_AUTHENTICATION_SHIBBOLETH_PARAM_ENDPOINT_DESC="URL of the keycloak realm to authenticate with"
 
-COM_PLUGINS_INSTITUTIONS_FIELDSET_LABEL="Institutions"
+COM_PLUGINS_KEYCLOAK_FIELDSET_LABEL="Keycloak Options"
